Fix navigation on mobile, clean up

--- a/angularjs-portal-frame/src/main/webapp/css/buckyless/responsive.less
+++ b/angularjs-portal-frame/src/main/webapp/css/buckyless/responsive.less
@@ -176,9 +176,6 @@
 
 @media (max-width: 992px) {
 
-  .up-portlet-wrapper {
-    display: none;
-  }
   .notifications-list {
     margin-right: 0px;
   }
